fix a typo in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -87,7 +87,7 @@ setw -g mode-keys vi
 
 # Maximize and restore a pane
 unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.l \; select-window -t tmp
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
